.apex/unpackaged/objects/redwing__Training_Plan_Category__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Learning_Category__c</fullName>
        <label>Catalog</label>
        <referenceTo>redwing__Learning_Category__c</referenceTo>
        <relationshipLabel>Catalog Learning Plans</relationshipLabel>
        <relationshipName>Training_Plan_Categories</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>redwing__Order__c</fullName>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan__c</fullName>
        <label>Learning Plan</label>
        <referenceTo>redwing__Training_Plan__c</referenceTo>
        <relationshipLabel>Learning Plan Catalogs</relationshipLabel>
        <relationshipName>Training_Plan_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Learning Plan Catalog</label>
    <nameField>
        <displayFormat>LPC-{0000000}</displayFormat>
        <label>Learning Plan Catalog ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Plan Catalogs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>